<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert">Device Disconnected&lt;br /&gt;&lt;br /&gt;1)Please go to mobile phone bluetooth menu and pair it with &lt;b&gt;Dual-SPP&lt;/b&gt;. &lt;br /&gt;&lt;br /&gt;2)In app, tap on Menu icon and select Bluetooth scan. &lt;br /&gt;&lt;br /&gt;3)Then select &lt;b&gt;Dual-SPP&lt;/b&gt; from list.</string>
    <string name="amber">Amber</string>
    <string name="app_name">Leg room lamp</string>
    <string name="app_name_d">Toyota leg room lamp</string>
    <string name="app_version">Version 2.0</string>
    <string name="auto_alert">Please turn Automode Off.</string>
    <string name="automode">Automode</string>
    <string name="blue">Blue</string>
    <string name="cancel">Cancel</string>
    <string name="com.crashlytics.android.build_id">da6a2e53-ab0a-4ce7-9297-fc338a8d787a</string>
    <string name="connect">Connect a Device</string>
    <string name="connect_lost">Device connection is lost</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnected</string>
    <string name="get_connect">Connecting to</string>
    <string name="green">Green</string>
    <string name="helpme">Help</string>
    <string name="no_bluetooth">Bluetooth is not Available</string>
    <string name="no_device">No Devices Found</string>
    <string name="power">Power</string>
    <string name="power_alert">Please turn Power ON.</string>
    <string name="power_off">Power Off</string>
    <string name="power_on">Power On</string>
    <string name="red">Red</string>
    <string name="refresh">Refresh</string>
    <string name="search_menu_title">Search</string>
    <string name="select_bt">Select Device</string>
    <string name="status">Bluetooth</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="unable_to_connect">Unable to connect device</string>
    <string name="white">White</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>