<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/img_side_menu"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@+id/frameCar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/dim_small"
        android:layout_marginRight="@dimen/dim_small"
        android:src="@drawable/ic_menu_new" />

    <FrameLayout
        android:id="@+id/frameCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageCar"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:padding="@dimen/dim_small"
                    android:scaleType="fitCenter"
                    android:src="@drawable/car_blue" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBar_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_small"
                android:background="@android:color/transparent"
                android:max="251"
                android:progressDrawable="@drawable/seek_progress"
                android:thumb="@drawable/custom_thumb" />

            <LinearLayout
                android:id="@+id/linearColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_vertical|center_horizontal|center"
                android:layout_marginBottom="@dimen/dim_medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/amber"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="@dimen/dim_extra_small"
                        android:background="@drawable/shape" />

                    <TextView
                        android:id="@+id/amber_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/amber"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/blue"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="@dimen/dim_extra_small"
                        android:background="@drawable/shape_blue" />

                    <TextView
                        android:id="@+id/blue_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/blue"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/red"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="@dimen/dim_extra_small"
                        android:background="@drawable/shape_red" />

                    <TextView
                        android:id="@+id/red_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/red"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/white"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="@dimen/dim_extra_small"
                        android:background="@drawable/shape_white" />

                    <TextView
                        android:id="@+id/white_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/white"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/green"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="@dimen/dim_extra_small"
                        android:background="@drawable/shape_green" />

                    <TextView
                        android:id="@+id/green_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/green"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:id="@+id/blocker" android:background="@color/color_blocker" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameCar"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect"
                android:textColor="@color/white"
                android:textSize="@dimen/text_con" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
